// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`closes a failed no-model session 1`] = `
"✗ pi RPC handshake or no-model probe failed.
  Fix: Check that pi starts in RPC mode; update or repair pi and rerun prefaix doctor.
"
`;

exports[`detects Forge initialization eval $(forge init zsh) 1`] = `
"✗ A Forge shell plugin may conflict with prefaix.
  Fix: Remove Forge initialization from the shell rc file, then restart the shell.
"
`;

exports[`detects Forge initialization plugins=(git forge) 1`] = `
"✗ A Forge shell plugin may conflict with prefaix.
  Fix: Remove Forge initialization from the shell rc file, then restart the shell.
"
`;

exports[`detects Forge initialization source /path/pi-zsh-plugin/plugin.zsh 1`] = `
"✗ A Forge shell plugin may conflict with prefaix.
  Fix: Remove Forge initialization from the shell rc file, then restart the shell.
"
`;

exports[`detects ble.sh initialization 1`] = `
"✗ ble.sh may conflict with prefaix's bash bindings.
  Fix: Disable ble.sh in the prefaix shell, then restart it.
"
`;

exports[`detects loaded Forge using the plugin marker 1`] = `
"✗ A Forge shell plugin may conflict with prefaix.
  Fix: Remove Forge initialization from the shell rc file, then restart the shell.
"
`;

exports[`detects loaded ble.sh using the plugin marker 1`] = `
"✗ ble.sh may conflict with prefaix's bash bindings.
  Fix: Disable ble.sh in the prefaix shell, then restart it.
"
`;

exports[`does not mistake a directory for a clipboard executable 1`] = `
"⚠ No clipboard tool is available for this display.
  Fix: Use pbcopy on macOS, wl-copy on Wayland, or xclip on X11.
"
`;

exports[`does not search an empty PATH segment 1`] = `
"⚠ No clipboard tool is available for this display.
  Fix: Use pbcopy on macOS, wl-copy on Wayland, or xclip on X11.
"
`;

exports[`handles shell command errors without outputting their error 1`] = `
"✗ zsh version is unavailable or unsupported.
  Fix: Install zsh 5.8 or newer.
"
`;

exports[`hides probe exceptions 1`] = `
"✗ pi was not found or could not be inspected.
  Fix: Install @mariozechner/pi-coding-agent and put pi on PATH, or set agent.pi.bin.
"
`;

exports[`reports a failed RPC handshake without child errors 1`] = `
"✗ pi RPC handshake or no-model probe failed.
  Fix: Check that pi starts in RPC mode; update or repair pi and rerun prefaix doctor.
"
`;

exports[`reports a missing clipboard tool 1`] = `
"⚠ No clipboard tool is available for this display.
  Fix: Use pbcopy on macOS, wl-copy on Wayland, or xclip on X11.
"
`;

exports[`reports a runtime symlink 1`] = `
"✗ Runtime directory has unsafe ownership, type, or permissions.
  Fix: Stop the daemon; restore your ownership and mode 0700 on its runtime directory. Do not use a symlink.
"
`;

exports[`reports an unidentified shell 1`] = `
"✗ The invoking shell could not be identified.
  Fix: Run doctor from zsh, fish, or bash after loading prefaix init.
"
`;

exports[`reports an uninspectable runtime path 1`] = `
"✗ Runtime directory cannot be inspected.
  Fix: Check directory access permissions, then rerun prefaix doctor.
"
`;

exports[`reports an uninspectable socket path 1`] = `
"✗ Daemon socket cannot be inspected.
  Fix: Check directory access permissions, then rerun prefaix doctor.
"
`;

exports[`reports an unloaded plugin 1`] = `
"⚠ The prefaix shell plugin is not loaded in this shell.
  Fix: Run prefaix setup, then restart the shell.
"
`;

exports[`reports an unreadable config file 1`] = `
"✗ Configuration could not be read.
  Fix: Check config.toml access permissions and file type.
"
`;

exports[`reports an unresolved runtime layout 1`] = `
"✗ The runtime layout cannot be resolved.
  Fix: Use absolute HOME and XDG directory paths, then rerun prefaix doctor.
"
`;

exports[`reports an unsafe socket 1`] = `
"✗ Daemon socket has unsafe ownership, type, or permissions.
  Fix: Stop the daemon; restore your ownership and mode 0600 on its socket. Do not use a symlink.
"
`;

exports[`reports an unusable installation 1`] = `
"✗ pi RPC probe was skipped because the installation is not usable.
  Fix: Repair or upgrade pi, then rerun prefaix doctor.
"
`;

exports[`reports bash 3.2 degraded support 1`] = `
"⚠ bash supports only the degraded pfx command on this version.
  Fix: Install bash 4.4 or newer for colon interception.
"
`;

exports[`reports every healthy check and never prompts the backend 1`] = `
"✓ Configuration and PREFAIX overrides are valid.
✓ pi is installed.
✓ pi meets the tested minimum (0.87.1).
✓ pi RPC handshake, state, models, commands, idle abort, and shutdown passed without a model request.
✓ zsh meets the supported version requirement.
✓ The prefaix shell plugin is loaded.
✓ No Forge plugin conflict detected.
✓ No ble.sh conflict detected.
✓ Runtime directory is absent; the daemon will create it securely when needed.
✓ Daemon socket is absent; the daemon will create it securely when needed.
✓ A clipboard tool is available.
"
`;

exports[`reports invalid config without including values or source text 1`] = `
"✗ Configuration or PREFAIX overrides are invalid.
  Fix: Review config.toml and PREFAIX overrides against the configuration reference. Values are omitted for privacy.
"
`;

exports[`reports missing pi 1`] = `
"✗ pi was not found or could not be inspected.
  Fix: Install @mariozechner/pi-coding-agent and put pi on PATH, or set agent.pi.bin.
"
`;

exports[`reports no clipboard for a headless Linux session 1`] = `
"⚠ No clipboard tool is available for this display.
  Fix: Use pbcopy on macOS, wl-copy on Wayland, or xclip on X11.
"
`;

exports[`reports rc read failures 1`] = `
"⚠ The shell rc file could not be inspected for conflicts.
  Fix: Check rc-file access permissions and remove conflicting Forge or ble.sh initialization.
"
`;

exports[`reports shutdown failure 1`] = `
"✗ pi RPC handshake or no-model probe failed.
  Fix: Check that pi starts in RPC mode; update or repair pi and rerun prefaix doctor.
"
`;

exports[`reports unsafe runtime permissions 1`] = `
"✗ Runtime directory has unsafe ownership, type, or permissions.
  Fix: Stop the daemon; restore your ownership and mode 0700 on its runtime directory. Do not use a symlink.
"
`;

exports[`reports unsupported bash 1`] = `
"✗ bash version is unavailable or unsupported.
  Fix: Install bash 4.4 or newer.
"
`;

exports[`reports unsupported fish 1`] = `
"✗ fish version is unavailable or unsupported.
  Fix: Install fish 3.6 or newer.
"
`;

exports[`reports unsupported pi "0.0.9" 1`] = `
"✗ pi version is unknown or older than the tested minimum.
  Fix: Install pi 0.87.1 or newer, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi "0.0.9" 2`] = `
"✗ pi RPC probe was skipped because the installation is not usable.
  Fix: Repair or upgrade pi, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi "0.86.100" 1`] = `
"✗ pi version is unknown or older than the tested minimum.
  Fix: Install pi 0.87.1 or newer, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi "0.86.100" 2`] = `
"✗ pi RPC probe was skipped because the installation is not usable.
  Fix: Repair or upgrade pi, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi "0.87.0" 1`] = `
"✗ pi version is unknown or older than the tested minimum.
  Fix: Install pi 0.87.1 or newer, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi "0.87.0" 2`] = `
"✗ pi RPC probe was skipped because the installation is not usable.
  Fix: Repair or upgrade pi, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi "nonsense SECRET" 1`] = `
"✗ pi version is unknown or older than the tested minimum.
  Fix: Install pi 0.87.1 or newer, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi "nonsense SECRET" 2`] = `
"✗ pi RPC probe was skipped because the installation is not usable.
  Fix: Repair or upgrade pi, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi undefined 1`] = `
"✗ pi version is unknown or older than the tested minimum.
  Fix: Install pi 0.87.1 or newer, then rerun prefaix doctor.
"
`;

exports[`reports unsupported pi undefined 2`] = `
"✗ pi RPC probe was skipped because the installation is not usable.
  Fix: Repair or upgrade pi, then rerun prefaix doctor.
"
`;

exports[`reports unsupported zsh 1`] = `
"✗ zsh version is unavailable or unsupported.
  Fix: Install zsh 5.8 or newer.
"
`;

exports[`reports wrong runtime ownership 1`] = `
"✗ Runtime directory has unsafe ownership, type, or permissions.
  Fix: Stop the daemon; restore your ownership and mode 0700 on its runtime directory. Do not use a symlink.
"
`;
